--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,17 @@
     <string name="voc_security_login">VOC Security Login</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="os_options">
+        <item>Linux (Ubuntu/Debian)</item>
+        <item>Windows Server</item>
+        <item>Cisco IOS</item>
+        <item>Autre</item>
+    </string-array>
+
+    <string-array name="criticality_options">
+        <item>Basse</item>
+        <item>Moyenne</item>
+        <item>Haute</item>
+        <item>Critique</item>
+    </string-array>
 </resources>
